# trade-signal-engine_edge

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
src/resources/: alpaca_market_data.postman_collection.json
src/trade_signal_edge/: api_client.py  cli.py  config.py  indicators.py  ingestion.py  models.py  providers.py  publisher.py  schema.py  session_calendar.py  signal_engine.py  state_machine.py  status_server.py
tests/: test_api_client.py  test_cli.py  test_config.py  test_indicators.py  test_ingestion.py  test_providers.py  test_publisher.py  test_session_calendar.py  test_signal_engine.py  test_state_machine.py  test_status_server.py
